Refactor ChatbotService for improved clarity and maintainability
Co-authored-by: dchipade <dchipade@gmail.com>